Version 0.51.0 ( In Progress)

Version 0.50.0 ( 24 November 2014)

  * include support for RHEL7 without need for additional yum downloadonly plugin
  * remove use of Switch.pm from losf util to support newer perl versions
  * update parallel ssh tool (koomie_cf) to support SLES12

Version 0.49.0 (28 September 2014)

  * update to RPM .spec file template - removes shell startup scripts
    in favor of links to binaries
  * new option added to koomie_cf: use -q to launch underlying ssh commands
    with quiet option -primarily useful to silence .ssh key warnings
  * disable output coloring if no tty is connected
  * update CLI wrappers to account for execution via soft link
  * improve command-line parsing within losf utility to warn against unsupported options

Version 0.48.0 (10 August 2014)

  * extend update for chroot environments to allow for native execution on a non-master type host
  * added input option to allow specification of desired Warewulf bootstrap
  * addition of chroot support for "losf updatepkgs" option
  * added support for zypper OS patterns with "losf addgroup" under SLES
  * fix for incomplete OS package additions under SLES using zypper package management
  * added perl-Log-Log4perl dependency in RPM .spec file for SLES
  * inclusion of optional support to define network gateway for Warewulf installs

Version 0.47.3 (22 July 2014)

  * fix for user-supplied update.<cluster> file not being executed during udpate
  * updated ipmi convenience utils (ion,ioff, etc) to use lanplus interface

Version 0.47.2 (15 July 2014)

  * fix for 'sync_config_files' throwing error when no file argument is given

Version 0.47.1 (07 July 2014)

  * fix for 'update -v' not displaying version info
  * addition of a force option (-f) to the update utility allowing updates even 
    when the /root/losf-noupdate file is present

Version 0.47.0 (07 July 2014)

  * bug fix for OS package removal in non-chroot environment